# zero-to-production

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: audit-on-push.yml  audit.yml  general.yml  scheduled-audit.yml
.sqlx/: query-0029b925e31429d25d23538804511943e2ea1fddc5a2db9a4e219c9b5be53fce.json  query-06f83a51e9d2ca842dc0d6947ad39d9be966636700de58d404d8e1471a260c9a.json  query-0b93f6f4f1bc59e7ee597ef6df52bbee1233d98e0a4cf53e29c153ccdae0537b.json  query-1bb5d1c15161a276262535134c306bc392dda0fa1d7bb7deddcd544583a19fc8.json  query-21f0f4c2ae0e88b99684823b83ce6126c218cec3badc8126492aab8fc7042109.json  query-2880480077b654e38b63f423ab40680697a500ffe1af1d1b39108910594b581b.json  query-33b11051e779866db9aeb86d28a59db07a94323ffdc59a5a2c1da694ebe9a65f.json  query-38d1a12165ad4f50d8fbd4fc92376d9cc243dcc344c67b37f7fef13c6589e1eb.json  query-51c9c995452d3359e3da7e2f2ff8a6e68690f740a36d2a32ec7c40b08931ebdb.json  query-753c8ecfac0ea7d052e60cb582e3b3ebac5e50eb133152712ca18ab5d5e202f3.json  query-793f0df728d217c204123f12e4eafd6439db2d49d0cb506618ae9e780c7e0558.json  query-7b57e2776a245ba1602f638121550485e2219a6ccaaa62b5ec3e4683e33a3b5f.json  query-9ab6536d2bf619381573b3bf13507d53b2e9cf50051e51c803e916f25b51abd2.json  query-9f103f7d6dfa569bafce4546e6e610f3d31b95fe81f96ea72575b27ddfea796e.json  query-a71a1932b894572106460ca2e34a63dc0cb8c1ba7a70547add1cddbb68133c2b.json  query-aa682ff5c6485c4faa8168322413294a282ddcc0ef4e38ca3980e6fc7c00c87c.json  query-aa6ec2d18c8536eb8340bdf02a833440ff7954c503133ed99ebd6190822edf04.json  query-acf1b96c82ddf18db02e71a0e297c822b46f10add52c54649cf599b883165e58.json  query-ad120337ee606be7b8d87238e2bb765d0da8ee61b1a3bc142414c4305ec5e17f.json  query-c00b32b331e0444b4bb0cd823b71a8c7ed3a3c8f2b8db3b12c6fbc434aa4d34b.json  query-ed279fc2dda0c3ede3e81a4500fcaa9da2220f8a9ad6c1debc3095deb9f84759.json
chapter03-0/: Cargo.toml
chapter03-0/src/: lib.rs  main.rs
chapter03-0/tests/: health_check.rs
chapter03-1/: Cargo.toml  configuration.yaml  sqlx-data.json
chapter03-1/migrations/: 20200823135036_create_subscriptions_table.sql
chapter03-1/scripts/: init_db.sh
chapter03-1/src/: configuration.rs  lib.rs  main.rs  startup.rs
chapter03-1/src/routes/: subscriptions.rs
chapter03-1/tests/: health_check.rs
chapter03-1/tests/all/: health_check.rs  helpers.rs  main.rs  subscriptions.rs
chapter04/: Cargo.toml  configuration.yaml
chapter04/scripts/: init_db.sh
chapter04/src/: lib.rs  main.rs  startup.rs  telemetry.rs
chapter04/src/routes/: subscriptions.rs
chapter04/tests/: health_check.rs
chapter05/: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
chapter05/configuration/: local.yaml  production.yaml
chapter05/deploy/: spec.yaml
chapter05/src/: configuration.rs  main.rs
chapter05/src/routes/: health_check.rs  subscriptions.rs
chapter05/tests/: health_check.rs
configuration/: BaseSG.yaml  base.yaml  local.yaml  production.yaml
migrations/: 20200823135036_create_subscriptions_table.sql  20210307181858_add_status_to_subscriptions.sql  20210307184428_make_status_not_null_in_subscriptions.sql  20210307185410_create_subscription_tokens_table.sql  20210815112026_create_users_table.sql  20210822143736_rename_password_column.sql  20210829175741_add_salt_to_users.sql  20210829200701_remove_salt_from_users.sql  20211217223217_seed_user.sql  20220312175058_seed_user.sql  20220313182312_create_idempotency_table.sql  20220313184809_relax_null_checks_on_idempotency.sql  20220313190920_create_newsletter_issues_table.sql  20220313191254_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs  password.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
