[package]
name = "zero2prod"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "^4"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
serde = "~1"
config = { version = "^0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "^0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "^1", features = ["v4"] }
chrono = { version = "^0.4", default-features = false, features = ["clock"] }
log = "^0.4"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "^0.3"
tracing-log = "^0.1"
serde-aux = "^4"
unicode-segmentation = "^1"
validator = "^0.18"
tracing-actix-web = "^0.7"
secrecy = { version = "^0.8", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "^0.12", features = ["json"] }
claims = "^0.7"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "^2"
once_cell = "^1"
rand_core = "^0.6"
rand = "^0.8"

[patch.crates-io] # Because yaml-rust is unmaintained and config 0.14.0 exists with yaml-rust2 drop-in replacement in this unpublished commit
config = { git = 'https://github.com/mehcode/config-rs.git', rev = 'c4778596cd3f3b1001ca35bd6960fc1b139746ea' }
