[package]
name = "chapter03-1"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chapter03-1"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
tokio = "0.2.22"
serde = "1.0.115"

[dev-dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
serde_json = "1.0.57"
